--- a/package.json
+++ b/package.json
@@ -44,5 +44,10 @@
     "typescript": "^4.7.4",
     "vite": "^3.0.2"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@georgedoescode/generative-utils": "^1.0.38",
+    "nice-color-palettes": "^3.0.0",
+    "tinycolor2": "^1.4.2"
+  }
 }
