--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,9 @@
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"sourceMap": true,
-		"strict": true
-	}
+		"strict": true,
+		"outDir": "build",
+	},
+	"include": ["src/**/*"],
+	"exclude": ["node_modules", "build/**/*"]
 }
