--- a/package.json
+++ b/package.json
@@ -45,10 +45,5 @@
     "typescript": "^4.7.4",
     "vite": "^3.0.2"
   },
-  "type": "module",
-  "dependencies": {
-    "@georgedoescode/generative-utils": "^1.0.38",
-    "nice-color-palettes": "^2.0.0",
-    "tinycolor2": "^1.4.2"
-  }
+  "type": "module"
 }
